--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,11 +1,26 @@
 .App {
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* .App-categories {
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  opacity: 1;
+  background: rgb(0, 0, 0);
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transition: all 0.3s linear;
 }
+
+.App-categories.show {
+  top: 12vh;
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -24,8 +39,9 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.home{
+  margin-top: 10vh;
+  margin-bottom: 20vh;
 }
 
 .container{
@@ -34,17 +50,63 @@
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 }
 
-.card{
+div.card{
   margin: 8px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-flow: wrap;
-  
+  background-color: #b3b3b3;
+  color: #000000;
+  border-radius: 5%;
+  border: none;
+  box-shadow: #000000 10px;
+}
+
+h6{
+  color: white;
+}
+
+.card-img-top{
+  border-radius: 0%;
+  height:35%;
 }
 
 .card-title{
   height: 7rem;
+  font-weight: bold;
+  padding: 15px;
+}
+
+Button a{
+  text-decoration: none;
+  color: white;
+}
+
+.line{
+  height: 6px;
+  width: 20%;
+  background: #05668D;
+  display: inline-block;
+}
+
+Button.btn{
+  border: none;
+ color: white;
+ background-color: #05668D;
+}
+Button.btn:hover{
+  border: none;
+ color: #05668D;
+ background-color: white;
+ font-weight: bold;
+}
+
+input{
+  height: 10%;
+  border:none;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes App-logo-spin {
